// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`case-summary > renders with callToAction buttons 1`] = `
"

<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          Valley Farm
        </h1>
      </div>
        <div class="moj-page-header-actions__actions">
          <div class="moj-button-group moj-button-group--inline">
              <form
                method="POST"
                action="/cases//page-action"
                style="display: inline-block; margin: 0;"
              >
                <input
                  type="hidden"
                  name="actionCode"
                  value="RERUN_RULES"
                />
                <input
                  type="hidden"
                  name="actionName"
                  value="Rerun Rules"
                />
                <button
                  type="submit"
                  class="govuk-button govuk-button--primary"
                  data-module="govuk-button"
                  data-prevent-double-click="true"
                >
                  Rerun Rules
                </button>
              </form>
              <form
                method="POST"
                action="/cases//page-action"
                style="display: inline-block; margin: 0;"
              >
                <input
                  type="hidden"
                  name="actionCode"
                  value="ANOTHER_ACTION"
                />
                <input
                  type="hidden"
                  name="actionName"
                  value="Another Action"
                />
                <button
                  type="submit"
                  class="govuk-button govuk-button--primary"
                  data-module="govuk-button"
                  data-prevent-double-click="true"
                >
                  Another Action
                </button>
              </form>
          </div>
        </div>
    </div>
    <div>
      <div class="app-case-row">
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >SBI:</strong
                >
                SBI001
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Reference:</strong
                >
                b18lb85
              </p>
            </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`case-summary > renders without callToAction 1`] = `
"

<div class="govuk-!-margin-bottom-6 app-case-banner">
  <div class="govuk-width-container">
    <a href="/cases" class="govuk-back-link">Back to cases</a>
    <div class="moj-page-header-actions">
      <div class="moj-page-header-actions__title">
        <h1 class="govuk-heading-m govuk-!-margin-bottom-0">
          Valley Farm
        </h1>
      </div>
    </div>
    <div>
      <div class="app-case-row">
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >SBI:</strong
                >
                SBI001
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Reference:</strong
                >
                b18lb85
              </p>
            </div>
            <div class="app-case-cell">
              <p>
                <strong class="govuk-!-margin-right-1"
                  >Scheme:</strong
                >
                SFI
              </p>
            </div>
      </div>
    </div>
  </div>
</div>
"
`;
